<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@android:color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimAnimationDuration="200">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_event_details_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?colorPrimary"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <View
                    android:id="@+id/v_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/background_gradient"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_collapsing"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_rounded_event_details"
            android:orientation="vertical"
            android:padding="16dp">

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent" />

            <FrameLayout
                android:id="@+id/fl_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_event_details_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                                android:textAllCaps="true"
                                android:text="@string/event"/>

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_event_detail_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                                android:textColor="@android:color/darker_gray"
                                tools:text="Blue Men Group" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/bt_check_in"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_rounded_button"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_check_in"/>

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/bt_share"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/background_rounded_button"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_share"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/date"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_event_detail_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@android:color/darker_gray"
                        tools:text="@tools:sample/date/ddmmyy" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/description"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_event_detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@android:color/darker_gray"
                        tools:text="@tools:sample/lorem/random"
                        tools:maxLines="5"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/address"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_event_detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Rua ABC, 123 - Bairro Teste - Porto Alegre-RS" />

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fragment_map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/participants"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_person" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/price"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_event_detail_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@android:color/darker_gray"
                        tools:text="R$ 10,00" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textAllCaps="true"
                        android:text="@string/coupons"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_coupons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_coupon" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="top|center"
                    tools:visibility="gone"/>
            </FrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>